<resources>
    <string name="app_name">WAD Android CA</string>
    <string name="startEasy">I can flip</string>
    <string name="startDifficult">I am flipping good</string>
    <string name="team6">Team-6</string>
    <string name="designDesc">Top Bar</string>
    <string name="about">How to Play</string>
    <string name="video">Video tutorial</string>
    <string name="lBoard">Leader Board</string>
    <string name="fetch">Fetch</string>
    <string name="fetch_prompt">Select fetch to download images</string>
    <string name="no_image_warning">No images found. Please try another Web page.</string>
    <string name="defaultURL">https://stocksnap.io</string>
    <string name="score">Score</string>
    <string name="timer">Time</string>
    <string name="matches">Matches</string>
    <string name="pop_up_final_score">FINAL SCORE</string>
    <string name="game_completed">Congratulation!</string>
    <string name="game_lose">Time is Up!</string>
    <string name="pop_up_lose_msg">That was close, better luck next time!</string>
    <string name="leader_board_title">Leader Board</string>
    <string name="leader_board_table_header_rank">Rank</string>
    <string name="leader_board_table_header_name">Name</string>
    <string name="leader_board_table_header_score">Score</string>
    <string name="back">Back</string>
    <string name="Description">Descriptin</string>
    <string name="OK">OK</string>
    <string name="DummyText">DummyText</string>
    <string name="EnterName">Please enter your name</string>
    <string name="PlayerName">Player name here</string>
    <string name="Submit">Submit</string>
</resources>