<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/francois_one"
        android:gravity="center"
        android:text="@string/game_completed"
        android:textAlignment="center"
        android:textColor="@color/TrypanBlue"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/dialog_character"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:contentDescription="@string/Description"
        app:srcCompat="@drawable/happy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/francois_one"
        android:text="@string/pop_up_final_score"
        android:textAlignment="center"
        android:textColor="@color/TrypanBlue"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/francois_one"
        android:textAlignment="center"
        android:textColor="@color/TickleMePink"
        android:textSize="22sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/francois_one"
        android:gravity="center"
        android:hint="@string/EnterName"
        android:textAlignment="center"
        android:textColor="@color/Rhythm"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/PlayerName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/TickleMePink" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/TrypanBlue"
        android:fontFamily="@font/francois_one"
        android:text="@string/Submit"
        android:textColor="@color/White"
        android:textSize="18sp" />

</LinearLayout>