<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/leaderboard_background"
    tools:context=".LeaderBoardActivity">

    <TextView
        android:id="@+id/leaderBoardHeader"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="@font/francois_one"
        android:gravity="center"
        android:text="@string/leader_board_title"
        android:textAlignment="center"
        android:textColor="@color/TickleMePink"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/leaderTableHeading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/leaderTableHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/leaderBoardHeader">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:padding="5dp"
            android:text="@string/leader_board_table_header_rank"
            android:textAlignment="center"
            android:textColor="@color/Rhythm"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/leaderBoardName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:padding="5dp"
            android:text="@string/leader_board_table_header_name"
            android:textAlignment="center"
            android:textColor="@color/Rhythm"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/leaderBoardScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:padding="5dp"
            android:text="@string/leader_board_table_header_score"
            android:textAlignment="center"
            android:textColor="@color/Rhythm"
            android:textSize="22sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/leaderBoardListing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:cacheColorHint="@color/Rhythm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leaderTableHeading" />

</androidx.constraintlayout.widget.ConstraintLayout>