<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/menuLogo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/menuLogo"
        app:layout_constraintBottom_toTopOf="@id/footer"
        >

    <Button
        android:id="@+id/btnStartEasy"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_ticklemepink"
        android:fontFamily="@font/francois_one"
        android:text="@string/startEasy"
        android:textColor="@color/White"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStartDifficult"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_rounded_ticklemepink"
        android:fontFamily="@font/francois_one"
        android:text="@string/startDifficult"
        android:textColor="@color/White"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStartEasy" />

    <Button
        android:id="@+id/btnLBoard"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_rounded_ticklemepink"
        android:fontFamily="@font/francois_one"
        android:text="@string/lBoard"
        android:textColor="@color/White"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStartDifficult" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_rounded_ticklemepink"
        android:fontFamily="@font/francois_one"
        android:text="@string/about"
        android:textColor="@color/White"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLBoard"/>
<!--        app:layout_constraintBottom_toTopOf="@id/footer"-->
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPanel"
        app:srcCompat="@drawable/footer" />

</androidx.constraintlayout.widget.ConstraintLayout>